# PHANTOM

./: README.md
phantom/: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
phantom/.github/workflows/: ci.yml
phantom/phantom_cli/: main.py
phantom/phantom_core/: __init__.py
phantom/phantom_core/analysis/: kernel_fusion.py  per_channel.py
phantom/phantom_core/capture/: hook_capture.py
phantom/phantom_core/exec/targets/: __init__.py  mps.py  rocm.py
phantom/phantom_core/report/: interactive.py
phantom/phantom_core/utils/: logging.py
phantom/tests/: test_kernel_fusion.py  test_mps.py  test_per_channel.py  test_rocm.py
